# iota-streams-channels-interface

./: Cargo.toml  README.md  build.rs
client/: index.html  main.css  main.js
client/js/: main.js
interface/: package-lock.json  package.json
interface/public/: index.html
interface/src/: App.js  index.css  index.js
interface/src/components/: Connect.js  Interact.js  Introduce.js  Participate.js  Stream.js
src/: handle.rs  main.rs  model.rs  server.rs
