[package]
name = "iota-streams-channels-interface"
version = "0.1.0"
authors = ["Jeroen van den Hout <jlvandenhout@gmail.com>"]
edition = "2018"
include = [
    "interface/public",
    "interface/src",
    "interface/package.json",
]

[dependencies]
futures = { version = "0.3" }
tokio = { version = "1", features = ["full"] }
warp = { version = "0.3" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
iota-streams = { git = "https://github.com/iotaledger/streams", branch = "chrysalis-2", features = ["std", "tangle", "async"]}
clap = { version = "3.0.0-beta.2" }