[package]
name = "iota-streams-channels-interface"
version = "0.1.0"
authors = ["Jeroen van den Hout <jlvandenhout@gmail.com>"]
edition = "2018"

[dependencies]
futures = { version = "0.3" }
tokio = { version = "1", features = ["full"] }
warp = { version = "0.3" }
iota-streams = { git = "https://github.com/iotaledger/streams", branch = "chrysalis-2", features = ["std", "tangle"]}